tests/machine/x/go/outer_join.error
Error on line 0: run error: exit status 1
--- Outer Join using syntax ---
panic: interface conversion: interface {} is main.OrdersItem, not map[string]interface {}

goroutine 1 [running]:
main.main()
	/workspace/mochi/tests/machine/x/go/outer_join.go:124 +0xa17
exit status 2

1: //go:build ignore
